Fixed layout issues with album card

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,12 +1,14 @@
 html {
     overflow: hidden;
 }
+
 body {
     overflow: auto;
     -webkit-user-select: none;
     user-select: none;
     cursor: default;
 }
+
 html,
 body {
     height: 100%;
@@ -20,11 +22,14 @@ body {
 a {
     color: currentColor;
 }
+
 a:hover,
 a:focus {
     text-decoration: underline;
 }
+
 a.card,
+.card .title > a,
 .tabs a,
 .menu-list a {
     text-decoration: none !important;
@@ -33,6 +38,7 @@ a.card,
 img {
     display: block;
 }
+
 img:-moz-loading {
     visibility: hidden;
 }
@@ -41,16 +47,10 @@ img:-moz-loading {
     vertical-align: middle;
 }
 
-.column > .card {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    margin-bottom: 0;
+.card {
+    display: block;
+    cursor: pointer;
     overflow: hidden;
-}
-.column > .card > .card-content {
-    flex: 1;
-    margin-bottom: 0;
 }
 
 .box {
@@ -77,6 +77,7 @@ img:-moz-loading {
     right: 0.5rem;
     bottom: 0.5rem;
 }
+
 .has-image-play-button:hover .image-play-button {
     display: block;
 }
@@ -86,9 +87,11 @@ img:-moz-loading {
     width: 24px;
     height: 24px;
 }
+
 .icon:not(.is-colored) path {
     fill: currentColor;
 }
+
 .icon.is-inline {
     display: inline-block;
     vertical-align: middle;
@@ -108,6 +111,7 @@ img:-moz-loading {
 body {
     scrollbar-width: thin;
 }
+
 ::-webkit-scrollbar {
     width: 8px;
 }
@@ -116,6 +120,7 @@ body {
     .tabs {
         width: 100%;
     }
+
     .tabs li {
         flex: 1;
     }
@@ -130,20 +135,25 @@ body {
 .card-image {
     background-color: #ccc;
 }
+
 .app {
     scrollbar-color: rgba(0, 0, 0, 0.3) transparent;
 }
+
 ::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.3);
 }
+
 @media (prefers-color-scheme: dark) {
     .box.has-image,
     .card-image {
         background-color: #333;
     }
+
     .app {
         scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
     }
+
     ::-webkit-scrollbar-thumb {
         background-color: rgba(255, 255, 255, 0.3);
     }
@@ -154,6 +164,7 @@ body {
 .app.is-light .card-image {
     background-color: #ccc !important;
 }
+
 .app.is-light {
     scrollbar-color: rgba(0, 0, 0, 0.3) transparent !important;
 }
@@ -163,6 +174,7 @@ body {
 .app.is-dark .card-image {
     background-color: #333 !important;
 }
+
 .app.is-dark {
     scrollbar-color: rgba(255, 255, 255, 0.3) transparent !important;
 }
